k8s-configs/cluster-tools/base/logging/elastic-stack/kibana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        image: public.ecr.aws/r2h3l6e4/kibana/kibana:8.1.3

        ports:
        - containerPort: 5601
          name: http

        resources:
          limits:
            memory: 4Gi
            cpu: 2000m
          requests:
            memory: 1Gi
            cpu: 100m

---
# This service exposes the Kibana http port to the cluster.
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    name: http
  selector:
    app: kibana
