k8s-configs/cluster-tools/base/logging/elastic-stack/ingress.yaml
# This defines the ingress for the Kibana dashboard
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: kibana
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - logs-dev.ping-demo.com
  rules:
  - host: logs-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the dashboard
        - pathType: Prefix
          path: /
          backend:
            service:
              name: kibana
              port:
                number: 5601
